# ScriptHookV-rs

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml  scripthookv-rs.code-workspace
crates/example/: Cargo.toml
crates/example/src/: lib.rs  natives.rs
crates/libscripthookv-sys/: Cargo.toml
crates/libscripthookv-sys/src/: lib.rs
crates/scripthookv/: Cargo.toml
crates/scripthookv-rs/: Cargo.toml
crates/scripthookv-rs-gta/: Cargo.toml
crates/scripthookv-rs-gta/src/: game.rs  global_memory.rs  lib.rs  model.rs  natives.rs  player.rs  plugin.rs
crates/scripthookv-rs-gta/src/color/: color.rs  mod.rs  rgb.rs  rgba.rs
crates/scripthookv-rs-gta/src/entities/: entity.rs  entity_bone.rs  entity_bones.rs  mod.rs  object.rs  ped.rs  vehicle.rs
crates/scripthookv-rs-gta/src/entities/ped/: mod.rs  ped.rs
crates/scripthookv-rs-gta/src/entities/vehicle/: mod.rs  vehicle.rs  vehicle_class.rs  vehicle_color_manager.rs  vehicle_door.rs  vehicle_door_index.rs  vehicle_doors.rs  vehicle_extra.rs  vehicle_license_plate_style.rs  vehicle_mod_manager.rs  vehicle_mod_type.rs  vehicle_toggle_mod.rs  vehicle_wheel.rs  vehicle_wheels.rs
crates/scripthookv-rs-gta/src/five/: game_script_handler.rs  mod.rs
crates/scripthookv-rs-gta/src/gta/: cam.rs  game.rs  hud.rs  misc.rs  mobile.rs  mod.rs  model.rs  player.rs  texture_dict.rs
crates/scripthookv-rs-gta/src/gta/entities/: entity.rs  entity_bones.rs  object.rs
crates/scripthookv-rs-gta/src/gta/entities/ped/: mod.rs  ped.rs  ped_struct.rs
crates/scripthookv-rs-gta/src/gta/entities/vehicle/: mod.rs  vehicle_class.rs  vehicle_color_manager.rs  vehicle_door.rs  vehicle_doors.rs  vehicle_license_plate_style.rs  vehicle_mod_manager.rs  vehicle_mod_type.rs  vehicle_struct.rs  vehicle_toggle_mod.rs  vehicle_wheel.rs  vehicle_wheel_bone_id.rs  vehicle_wheels.rs
crates/scripthookv-rs-gta/src/gta/input/: control.rs  input_context.rs  mod.rs
crates/scripthookv-rs-gui/: Cargo.toml
crates/scripthookv-rs-gui/src/: event_emitter.rs  lib.rs
crates/scripthookv-rs-gui/src/gui/: menu_entry.rs  mod.rs  value_source.rs
crates/scripthookv-rs-gui/src/gui/menu/: menu_control.rs  menu_history.rs  mod.rs
crates/scripthookv-rs-gui/src/gui/options/: events.rs  menu_option.rs  mod.rs  value_option.rs
crates/scripthookv-rs-gui/src/gui/renderer/: menu_entry_render_info.rs  menu_entry_renderer.rs  menu_renderer.rs  mod.rs  submenu_renderer.rs
crates/scripthookv-rs-gui/src/gui/renderer/default/: menu_entry_renderer.rs  menu_renderer.rs  mod.rs  submenu_renderer.rs
crates/scripthookv-rs-gui/src/gui/renderer/default/widgets/: menu_entries_widget.rs  menu_entry_widget.rs  menu_header_widget.rs  mod.rs  submenu_widget.rs
crates/scripthookv-rs-gui/src/gui/submenu/: mod.rs  submenu_entries.rs  submenu_selection.rs  submenu_struct.rs
crates/scripthookv-rs-gui/src/rendering/: font.rs  mod.rs  origin.rs  padding.rs  resizable.rs  sizing.rs  sprite_definition.rs  util.rs  widget.rs
crates/scripthookv-rs-gui/src/rendering/widgets/: layout.rs  mod.rs  rectangle.rs  sprite.rs  text.rs  vertical_stack.rs  with_background.rs
crates/scripthookv-rs-macros/: Cargo.toml
crates/scripthookv-rs-macros/src/: lib.rs
crates/scripthookv-rs-shv/: Cargo.toml
crates/scripthookv-rs-shv/src/: lib.rs
crates/scripthookv-rs/src/: builder_plugin.rs  call_native.rs  callbacks.rs  game_version.rs  lib.rs  memory_database.rs  script.rs  scripthookv.rs  scripthookv_builder.rs  scripting_backend.rs  sig_info.rs  texture.rs  timeout.rs  winapi.rs  world.rs
crates/scripthookv-rs/src/memory/: memory_location.rs  memory_restorer.rs  mod.rs
crates/scripthookv-rs/src/memory/scannables/: ida_pattern.rs  mod.rs  raw_pattern.rs  scannable.rs
crates/scripthookv-rs/src/memory/scanners/: memory_scanner.rs  mod.rs  module_memory_scanner.rs
crates/scripthookv-rs/src/natives/: mod.rs  native_caller.rs
crates/scripthookv-rs/src/scripting/: mod.rs  script.rs  script_commands.rs  script_future.rs  script_info.rs  script_manager.rs  script_runtime.rs  script_status.rs
crates/scripthookv-rs/src/types/: matrix.rs  mod.rs  vector2.rs  vector3.rs
crates/scripthookv/src/: call_native.rs  lib.rs  script.rs  types.rs  world.rs
crates/scripthookv/src/natives/: native_caller.rs
crates/scripthookv/src/types/: vector2.rs  vector3.rs
crates/shv_bindings/: Cargo.toml
crates/shv_bindings/src/: lib.rs
examples/: Cargo.toml  build.ps1
examples/crates/basic-example/: Cargo.toml
examples/crates/basic-example/src/: lib.rs
examples/crates/gui-example/: Cargo.toml
examples/crates/gui-example/src/: lib.rs
