[package]
name = "scripthookv-rs-gta"
version = "0.1.0"
edition = "2021"

[lib]
name = "scripthookv_gta"
path = "src/lib.rs"

[dependencies]
scripthookv-rs = { version = "0.3.0", path = "../scripthookv-rs" }
joaat = "0.1.0"
strum = "0.23"
strum_macros = "0.23"
num_enum = "0.5.7"
once_cell = "1.9.0"
smol = "1.2.4"
thiserror = "1.0"
