[package]
name = "scripthookv-rs-gui"
version = "0.1.0"
edition = "2021"

[lib]
name = "scripthookv_gui"
path = "src/lib.rs"

[dependencies]
num_enum = "0.5.7"
once_cell = "1.9.0"
scripthookv-rs = { version = "0.3.0", path = "../scripthookv-rs" }
scripthookv-rs-gta = { path = "../scripthookv-rs-gta" }
