[package]
name = "scripthookv-rs-macros"
version = "0.1.0"
edition = "2021"
description = "Macros for scripthookv-rs"
license = "MIT"
homepage = "https://github.com/DottieDot/ScriptHookV-rs"
repository = "https://github.com/DottieDot/ScriptHookV-rs.git"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
