[package]
name = "scripthookv-rs"
version = "0.1.5"
edition = "2021"
description = "Rust bindings for ScriptHookV"
license = "MIT"
homepage = "https://github.com/DottieDot/ScriptHookV-rs"
repository = "https://github.com/DottieDot/ScriptHookV-rs.git"
readme = "../../README.md"

[lib]
name = "scripthookv"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef"] }
libscripthookv-sys = "0.1.0"
