[package]
name = "scripthookv-rs"
version = "0.3.0"
edition = "2021"
description = "Rust bindings for ScriptHookV"
license = "MIT"
homepage = "https://github.com/DottieDot/ScriptHookV-rs"
repository = "https://github.com/DottieDot/ScriptHookV-rs.git"
readme = "../../README.md"

[lib]
name = "scripthookv"
path = "src/lib.rs"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
scripthookv-rs-macros = { version = "0.2.0", path = "../scripthookv-rs-macros" }
log = "0.4.14"
thiserror = "1.0"
winapi = { version = "0.3.9", features = [
  "psapi",
  "processthreadsapi",
  "libloaderapi",
] }
smol = "1.2.4"
async-trait = "0.1.52"
once_cell = "1.9.0"
