[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "basic_example"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
scripthookv-rs = { path = "../../../crates/scripthookv-rs" }
scripthookv-rs-macros = { path = "../../../crates/scripthookv-rs-macros" }
once_cell = "1.9.0"
