[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "basic_example"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
scripthookv-rs = { path = "../../../crates/scripthookv-rs" }
scripthookv-rs-gta = { path = "../../../crates/scripthookv-rs-gta" }
once_cell = "1.9.0"
winapi = { version = "0.3.9", features = [ "consoleapi", "winuser", "wincon" ] }
log = "0.4.14"
