[package]
name = "basic-example"
version = "0.1.0"
edition = "2021"

[lib]
name = "basic_example"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
scripthookv-rs = { version = "0.3.0", path = "../../../crates/scripthookv-rs" }
scripthookv-rs-gta = { path = "../../../crates/scripthookv-rs-gta" }
scripthookv-rs-shv = { path = "../../../crates/scripthookv-rs-shv" }
once_cell = "1.9.0"
winapi = { version = "0.3.9", features = ["consoleapi", "winuser", "wincon"] }
log = "0.4.14"
async-trait = "0.1.52"
